# models/init.go
@@ -1,12 +1,14 @@
 package models
 
 import (
+	"github.com/go-redis/redis/v8"
 	"gorm.io/driver/mysql"
 	"gorm.io/gorm"
 	"log"
 )
 
 var DB = Init()
+var RDB = InitRedisDB()
 
 func Init() *gorm.DB {
 	dsn := "root:1819332785@tcp(127.0.0.1:3306)/gin_gorm_oj?charset=utf8mb4&parseTime=True&loc=Local"
@@ -15,4 +17,12 @@ func Init() *gorm.DB {
 		log.Println("gorm Init Error : ", err)
 	}
 	return db
+}
+
+func InitRedisDB() *redis.Client {
+	return redis.NewClient(&redis.Options{
+		Addr:     "localhost:6379",
+		Password: "",
+		DB:       0,
+	})
 }
